# llm-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  big.txt  enc.py  et HEAD~1qq  main.ipynb  the-verdict.txt  vcpkg.json
.cursor/rules/: cleancode.mdc  cpp.mdc  environment.mdc
src/: CMakeLists.txt  gpt2.cpp
